try to drop http(s): from links

--- a/_posts/2014-01-14-about-zshrc.html
+++ b/_posts/2014-01-14-about-zshrc.html
@@ -6,7 +6,7 @@ hastr: true
 tags: zshrc, configuration, linux
 title: About zshrc
 short: about-zshrc
-description: It is first paper in my blog (I think I need something here for tests =)). There are many similar articles, and I'll not be an exception. I just want to show my <code>.zshrc</code> and explain what it does and why it is needed. Also any comments or additions are welcome. It is a translated paper from Russian (<a href="http://archlinux.org.ru/forum/topic/12752/" title="Forum thread">original</a>).
+description: It is first paper in my blog (I think I need something here for tests =)). There are many similar articles, and I'll not be an exception. I just want to show my <code>.zshrc</code> and explain what it does and why it is needed. Also any comments or additions are welcome. It is a translated paper from Russian (<a href="//archlinux.org.ru/forum/topic/12752/" title="Forum thread">original</a>).
 ---
 <h2><a href="#prepare" class="anchor" id="prepare"><span class="octicon octicon-link"></span></a>Prepare</h2>
 <p>First install recommended minima:</p>
@@ -15,10 +15,10 @@ description: It is first paper in my blog (I think I need something here for tes
 pacman -Sy pkgfile zsh zsh-completions zsh-syntax-highlighting
 {% endhighlight %}
 
-<p><a href="https://www.archlinux.org/packages/pkgfile/" title="Archlinux package">pkgfile</a> is a very useful utility. Also this command will install shell, additional completion and syntax highlighting.</p>
+<p><a href="//www.archlinux.org/packages/pkgfile/" title="Archlinux package">pkgfile</a> is a very useful utility. Also this command will install shell, additional completion and syntax highlighting.</p>
 
 <h2><a href="#configuration" class="anchor" id="configuration"><span class="octicon octicon-link"></span></a>Shell configuration</h2>
-<p>All options are avaible <a href="http://zsh.sourceforge.net/Doc/Release/Options.html" title="zsh documentation">here</a>.</p>
+<p>All options are avaible <a href="//zsh.sourceforge.net/Doc/Release/Options.html" title="zsh documentation">here</a>.</p>
 
 <p>Set history file and number of commands in cache of the current session and in the history file:</p>
 
@@ -304,7 +304,7 @@ alias less='vimpager'
 alias zless='vimpager'
 {% endhighlight %}
 
-<p>Here are ls aliases (see <a href="http://unixhelp.ed.ac.uk/CGI/man-cgi?ls" title="Man page">man ls</a>):</p>
+<p>Here are ls aliases (see <a href="//unixhelp.ed.ac.uk/CGI/man-cgi?ls" title="Man page">man ls</a>):</p>
 
 {% highlight bash %}
 alias ls='show_which ls && ls --color=auto --group-directories-first'
@@ -556,4 +556,4 @@ hash -d u2=/mnt/usbdev
 </div>
 
 <h2><a href="#file" class="anchor" id="file"><span class="octicon octicon-link"></span></a>File</h2>
-<p><a href="https://raw.github.com/arcan1s/dotfiles/master/zshrc" title="GitHub" type="text/plain">Here is</a> my <code>.zshrc</code>.</p>
+<p><a href="//raw.github.com/arcan1s/dotfiles/master/zshrc" title="GitHub" type="text/plain">Here is</a> my <code>.zshrc</code>.</p>
