--- a/_posts/2014-03-23-creating-custom-repo.html
+++ b/_posts/2014-03-23-creating-custom-repo.html
@@ -15,7 +15,7 @@ description: It is a short paper devoted to creation own ArchLinux repository.
 pacman -Sy devtools
 {% endhighlight %}
 
-<p><a href="https://www.archlinux.org/packages/devtools/" title="Archlinux package">devtools</a> is script set for building automation in the clean chroot. I think most of Arch maintainers use it.</p>
+<p><a href="//www.archlinux.org/packages/devtools/" title="Archlinux package">devtools</a> is script set for building automation in the clean chroot. I think most of Arch maintainers use it.</p>
 
 <p>Let's create working directories and set colors:</p>
 
@@ -144,7 +144,7 @@ if [ ${USEGPG} == "yes" ]; then
 fi
 {% endhighlight %}
 
-<p>It is recommended to configure <a href="https://wiki.archlinux.org/index.php/GPG#gpg-agent" title="ArchWiki">gpg-agent</a>.</p>
+<p>It is recommended to configure <a href="//wiki.archlinux.org/index.php/GPG#gpg-agent" title="ArchWiki">gpg-agent</a>.</p>
 
 <h3><a href="#list" class="anchor" id="list"><span class="octicon octicon-link"></span></a>Creating the list of packages</h3>
 
@@ -240,7 +240,7 @@ fi
 {% endhighlight %}
 
 <h3><a href="#file" class="anchor" id="file"><span class="octicon octicon-link"></span></a>File</h3>
-<p>Here is <a href="https://github.com/arcan1s/repo-scripts" title="GitHub">the scripts</a>. Download source tarballs and run script (editing variables if it is necessary).</p>
+<p>Here is <a href="//github.com/arcan1s/repo-scripts" title="GitHub">the scripts</a>. Download source tarballs and run script (editing variables if it is necessary).</p>
 
 <h2><a href="#using" class="anchor" id="using"><span class="octicon octicon-link"></span></a>Repository usage</h2>
 <p>Just add following lines to <code>/etc/pacman.conf</code>:</p>
