--- a/_posts/2014-07-17-writting-own-completions-p2.html
+++ b/_posts/2014-07-17-writting-own-completions-p2.html
@@ -133,4 +133,4 @@ _netctl_gui() {
 {% endhighlight %}
 
 <h2><a href="#conclusion" class="anchor" id="conclusion"><span class="octicon octicon-link"></span></a>Conclusion</h2>
-<p>File should be places to <code>/usr/share/bash-completion/completions/</code> with any name. You may found the example <a href="https://raw.githubusercontent.com/arcan1s/netctl-gui/master/sources/gui/bash-completions" title="File" type="text/plain">in my repository</a>.</p>
+<p>File should be places to <code>/usr/share/bash-completion/completions/</code> with any name. You may found the example <a href="//raw.githubusercontent.com/arcan1s/netctl-gui/master/sources/gui/bash-completions" title="File" type="text/plain">in my repository</a>.</p>
