--- a/about.html
+++ b/about.html
@@ -11,10 +11,10 @@ title: About me
       <header>
         <h1>{{ page.title }}</h1>
         <p class="view">
-          <a href="https://github.com/arcan1s" title="GitHub">GitHub Profile</a><br>
-          <a href="https://www.archlinux.org/trustedusers/#arcanis" title="TU profile">TU Profile on archlinux.org</a><br>
-          <a href="http://istina.msu.ru/profile/arcanis" title="Publications">Some of my publications</a><br>
-          PGP signature: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
+          <a href="//github.com/arcan1s" title="GitHub">GitHub Profile</a><br>
+          <a href="//www.archlinux.org/trustedusers/#arcanis" title="TU profile">TU Profile on archlinux.org</a><br>
+          <a href="//istina.msu.ru/profile/arcanis" title="Publications">Some of my publications</a><br>
+          PGP signature: <a href="//pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
           <a href="ftp://repo.arcanis.name/public" title="Keys">Public keys</a>
         </p>
 
@@ -43,9 +43,9 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
   <figcaption>Photo by Grineva O.V.</figcaption>
 </figure>
 
-<p>My name is Evgeniy Alekseev. In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="http://www.chem.msu.ru/" title="Department site">the Department of Chemistry</a> Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
+<p>My name is Evgeniy Alekseev. In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="//www.chem.msu.ru/" title="Department site">the Department of Chemistry</a> Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
 
-<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="http://en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="http://en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.name/" title="ftp">my home server</a>.<br>
+<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="//en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="//en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.name/" title="ftp">my home server</a>.<br>
 <label class="spoiler">
   <input type="checkbox" tabindex="-1">
   <span class="box">
@@ -57,12 +57,12 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 </label>
 </p>
 
-<p>Also I'm an <a href="https://www.archlinux.org/" title="Archlinux">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
-<blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
+<p>Also I'm an <a href="//www.archlinux.org/" title="Archlinux">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
+<blockquote cite="//wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
   The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.
 </blockquote>
 <p style="text-align:right;">
-  &copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
+  &copy; <a href="//wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
 </p>
 
 <p>All contact information can be found on the left. Feel free to contact me with any questions. Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:</p>
