--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -10,7 +10,7 @@ developers:
     - Evgeniy Alekseev
 license: GPLv3
 links:
-    - Archlinux <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">AUR package</a>
+    - Archlinux <a href="//aur.archlinux.org/packages/git-etc" title="AUR">AUR package</a>
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
@@ -62,7 +62,7 @@ See "man 1 ctrlconf" for more details
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li>Download an <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">archive</a> with latest version of source files.</li>
+  <li>Download an <a href="//github.com/arcan1s/git-etc/releases" title="GitHub">archive</a> with latest version of source files.</li>
   <li>Extract it and install the application:
 
 {% highlight bash %}
