--- a/projects/index.html
+++ b/projects/index.html
@@ -14,46 +14,46 @@ groups:
             description: <code>git-etc</code> is a simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval. It is written on <code>Bash</code>. It is also has a simple Graphical user interface written on <code>Python2</code> (<code>pyqt4</code>) for work with the created repository.
             links:
                 - <a href="/projects/git-etc" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/git-etc" title="GitHub">GitHub repo</a>
-                - <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">Archlinux AUR package</a>
+                - <a href="//github.com/arcan1s/git-etc" title="GitHub">GitHub repo</a>
+                - <a href="//aur.archlinux.org/packages/git-etc" title="AUR">Archlinux AUR package</a>
           - title: queued
             short: queued
             description: <code>queued</code> is daemon for starting jobs to queue of calculations. It was written on <code>Bash</code> created as proof-of-concept.
             links:
                 - <a href="/projects/queued" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/queued" title="GitHub">GitHub repo</a>
+                - <a href="//github.com/arcan1s/queued" title="GitHub">GitHub repo</a>
     - title: KDE widgets
       short: widgets
       projects:
           - title: Awesome Widgets
             short: awesome-widgets
-            description: <code>Awesome Widgets</code> is a collection of minimalistic Plasmoids <code>CPP</code>. It looks like widgets in <a href="http://awesome.naquadah.org/" title="Awesome Homepage">Awesome WM</a>. My plasmoids are highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="http://techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Developers tutorial">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
+            description: <code>Awesome Widgets</code> is a collection of minimalistic Plasmoids <code>CPP</code>. It looks like widgets in <a href="//awesome.naquadah.org/" title="Awesome Homepage">Awesome WM</a>. My plasmoids are highly and easily configurable and does not clutter your KDE system. Also this packages has an additional <a href="//techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Developers tutorial">DataEngine</a> written on <code>CPP</code> (old version was written on <code>Python2</code>).
             links:
                 - <a href="/projects/awesome-widgets" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/awesome-widgets" title="GitHub">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
-                - <a href="http://kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Archlinux AUR package</a>
-                - <a href="http://software.opensuse.org/package/awesome-widgets" title="openSUSE">openSUSE package</a>
+                - <a href="//github.com/arcan1s/awesome-widgets" title="GitHub">GitHub repo</a>
+                - <a href="//kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">Plasmoid page on kde-look.org</a>
+                - <a href="//kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">DataEngine page on kde-look.org</a>
+                - <a href="//aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Archlinux AUR package</a>
+                - <a href="//software.opensuse.org/package/awesome-widgets" title="openSUSE">openSUSE package</a>
           - title: Oblikue strategies
             short: oblikuestrategies
-            description: <code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">GNOME applet</a> fork with some of special features.
+            description: <code>oblikue-strategies</code> is a plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="//en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. It is <a href="//gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">GNOME applet</a> fork with some of special features.
             links:
                 - <a href="/projects/oblikuestrategies" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/oblikuestrategies" title="GitHub">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">Page on kde-look.org</a>
-                - <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">Archlinux AUR package</a>
+                - <a href="//github.com/arcan1s/oblikuestrategies" title="GitHub">GitHub repo</a>
+                - <a href="//kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">Page on kde-look.org</a>
+                - <a href="//aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">Archlinux AUR package</a>
           - title: Open on desktop
             short: openondesktop
-            description: <code>Open on desktop</code> is a dropbox menu for <a href="http://dolphin.kde.org" title="Dolphin Homepage">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
+            description: <code>Open on desktop</code> is a dropbox menu for <a href="//dolphin.kde.org" title="Dolphin Homepage">Dolhpin</a>. It creates a group in the context menu, which opens a file to the specified desktop when clicked. It has an install script written on <code>Bash</code>.
             links:
-                - <a href="https://github.com/arcan1s/openondesktop" title="GitHub">GitHub repo</a>
+                - <a href="//github.com/arcan1s/openondesktop" title="GitHub">GitHub repo</a>
           - title: Kit system monitor
             short: sysmon
-            description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="http://netdragon.sourceforge.ne/" title="SuperKaramba Homepage">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
+            description: <code>Kit System Monitor</code> is a system information and hardware monitor based on EG Sysmon. It is written on HTML-like language for <a href="//netdragon.sourceforge.ne/" title="SuperKaramba Homepage">SuperKaramba</a> and has simple install script written on <code>Python2</code>. It is my first Open Source Project.
             links:
-                - <a href="https://github.com/arcan1s/sysmon" title="GitHub">GitHub repo</a>
-                - <a href="http://kde-look.org/content/show.php/Kit+System+Monitor?content=155246" title="kde-look">Page on kde-look.org</a>
+                - <a href="//github.com/arcan1s/sysmon" title="GitHub">GitHub repo</a>
+                - <a href="//kde-look.org/content/show.php/Kit+System+Monitor?content=155246" title="kde-look">Page on kde-look.org</a>
     - title: Scientific programs
       short: science
       projects:
@@ -62,7 +62,7 @@ groups:
             description: They are represented by a single repository. It contains some programs for analysis of molecular dynamic trajectories using statistical mechanics and some of maths methods (e.g. graph theory). Usualy backend programs are written on <code>C</code>, but sometimes on <code>Python2</code>. Some of these have a Graphical user interface written on <code>CPP</code>.
             links:
                 - <a href="/projects/moldyn" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/moldyn" title="GitHub">GitHub repo</a>
+                - <a href="//github.com/arcan1s/moldyn" title="GitHub">GitHub repo</a>
     - title: Utilities
       short: utilities
       projects:
@@ -70,32 +70,32 @@ groups:
             short: extpkg
             description: <code>extract_pkglist</code> a simple script written on <code>Python2</code> for creating list of installed packages in ArchLinux.
             links:
-                - <a href="https://github.com/arcan1s/extract_pkglist" title="GitHub">GitHub repo</a>
+                - <a href="//github.com/arcan1s/extract_pkglist" title="GitHub">GitHub repo</a>
           - title: Food GUI
             short: foodgui
             description: <code>Food GUI</code> is a simple program-calculator that uses own database and written on <code>Python2</code>. It calculates proteins, fats, carbohydrates, food energy and glycemic index of eaten food. It is my first project with GUI and was made just-for-fun (and for my ex-girlfriend). It also has a binary version for Win64.
             links:
-                - <a href="https://github.com/arcan1s/food_gui" title="GitHub">GitHub repo</a>
-                - <a href="https://aur.archlinux.org/packages/food_gui" title="AUR">Archlinux AUR package</a>
+                - <a href="//github.com/arcan1s/food_gui" title="GitHub">GitHub repo</a>
+                - <a href="//aur.archlinux.org/packages/food_gui" title="AUR">Archlinux AUR package</a>
           - title: julius-actions
             short: julius-actions
-            description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="http://julius.sourceforge.jp/en_index.php" title="Julius Homepage">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
+            description: <code>julius-actions</code> is a script written on <code>Python2</code> for work with <a href="//julius.sourceforge.jp/en_index.php" title="Julius Homepage">julius</a>. It was made just-for-fun too in my spare time. Works normally, but I don't use it.
             links:
-                - <a href="https://github.com/arcan1s/julius-actions" title="GitHub">GitHub repo</a>
+                - <a href="//github.com/arcan1s/julius-actions" title="GitHub">GitHub repo</a>
           - title: Netctl GUI
             short: netctl-gui
             description: <code>Netctl GUI</code> graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>C++</code> using <code>Qt</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a widget and DataEngine for KDE4/KF5.
             links:
                 - <a href="/projects/netctl-gui" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/netctlplasmoid" title="GitHub">GitHub repo</a>
-                - Page on <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
-                - <a href="https://aur.archlinux.org/packages/netctl-gui" title="AUR">Archlinux AUR package</a>
+                - <a href="//github.com/arcan1s/netctlplasmoid" title="GitHub">GitHub repo</a>
+                - Page on <a href="//kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
+                - <a href="//aur.archlinux.org/packages/netctl-gui" title="AUR">Archlinux AUR package</a>
           - title: Report a Bug
             short: reportabug
-            description: Qt application/library which allows users to create an issue for projects which are hosted on GitHub. It may work over <a href="https://github.com" title="GitHub">GitHub</a> or <a href="https://gitreports.com/" title="GitReports">GitReport</a>.
+            description: Qt application/library which allows users to create an issue for projects which are hosted on GitHub. It may work over <a href="//github.com" title="GitHub">GitHub</a> or <a href="//gitreports.com/" title="GitReports">GitReport</a>.
             links:
                 - <a href="/projects/reportabug" title="Homepage">Homepage</a>
-                - <a href="https://github.com/arcan1s/reportabug" title="GitHub">GitHub repo</a>
+                - <a href="//github.com/arcan1s/reportabug" title="GitHub">GitHub repo</a>
 
 ---
   <body>
