--- a/projects/netctl-gui.html
+++ b/projects/netctl-gui.html
@@ -11,9 +11,9 @@ developers:
     - nosada (Japanese translation)
 license: GPLv3
 links:
-    - Page on <a href="http://linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
-    - Page on <a href="http://kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
-    - <a href="https://aur.archlinux.org/pkgbase/netctl-gui/" title="AUR">AUR package</a>
+    - Page on <a href="//linux.softpedia.com/get/System/Networking/Netctl-GUI-103383.shtml" title="Softpedia">Softpedia</a>
+    - Page on <a href="//kde-apps.org/content/show.php?content=164490" title="kde-apps">kde-apps.org</a>
+    - <a href="//aur.archlinux.org/pkgbase/netctl-gui/" title="AUR">AUR package</a>
     - <a href="/devs/netctl-gui-dbus-api.html" title="DBus API">DBus API reference</a>
     - <a href="/devs/netctl-gui-security-notes.html" title="Security">Security notes</a>
 ---
@@ -21,7 +21,7 @@ links:
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
 <p>Graphical interface for <code>netctl</code> (several scripts for work with network connection in Archlinux). It is written on <code>C++</code> using <code>Qt</code> library. Now it may work with profiles and may create new profiles. Also it may create a connection to WiFi. Moreover, it provides a Qt library for interaction with netctl and widget and DataEngine for KDE4/KF5.</p>
 
-<p><b>NOTE:</b> <a href="https://github.com/arcan1s/netctl-gui/issues/3" title="Ticket">LOOKING FOR TRANSLATORS!</a></p>
+<p><b>NOTE:</b> <a href="//github.com/arcan1s/netctl-gui/issues/3" title="Ticket">LOOKING FOR TRANSLATORS!</a></p>
 
 {% highlight bash %}
 $ netctl-gui --help
@@ -81,7 +81,7 @@ Options:
 </ul>
 
 <h3><a href="#changelog" class="anchor" id="changelog"><span class="octicon octicon-link"></span></a>Changelog</h3>
-<p><a href="https://github.com/arcan1s/netctl-gui/blob/master/CHANGELOG" title="GitHub">CHANGELOG</a></p>
+<p><a href="//github.com/arcan1s/netctl-gui/blob/master/CHANGELOG" title="GitHub">CHANGELOG</a></p>
 <!-- end of info block -->
 
 <!-- install block -->
@@ -89,7 +89,7 @@ Options:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li>Download an <a href="https://github.com/arcan1s/netctl-gui/releases" title="GitHub">archive</a> with latest version of source files.</li>
+  <li>Download an <a href="//github.com/arcan1s/netctl-gui/releases" title="GitHub">archive</a> with latest version of source files.</li>
   <li>Extract it and install the application. If you want install it into <code>/</code>, you should run as root following commands:
 
 {% highlight bash %}
