--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -11,7 +11,7 @@ developers:
     - Evgeniy Alekseev
 license: GPLv3
 links:
-    - Пакет в <a href="https://aur.archlinux.org/packages/git-etc" title="AUR">AUR</a>
+    - Пакет в <a href="//aur.archlinux.org/packages/git-etc" title="AUR">AUR</a>
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Информация</h2>
@@ -63,7 +63,7 @@ See "man 1 ctrlconf" for more details
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li>Скачайте <a href="https://github.com/arcan1s/git-etc/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Скачайте <a href="//github.com/arcan1s/git-etc/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
   <li>Извлеките из него файлы и установите приложение:
 
 {% highlight bash %}
