--- a/ru/projects/oblikuestrategies.html
+++ b/ru/projects/oblikuestrategies.html
@@ -11,12 +11,12 @@ developers:
     - Evgeniy Alekseev
 license: GPL
 links:
-    - Страница на <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">kde-look.org</a>
-    - Пакет в <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">AUR</a>
+    - Страница на <a href="//kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">kde-look.org</a>
+    - Пакет в <a href="//aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">AUR</a>
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Информация</h2>
-<p>Плазмоид, написанный на <code>CPP</code> который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. Это форк <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">апплета для GNOME</a> с некоторыми дополнительными фичами.</p>
+<p>Плазмоид, написанный на <code>CPP</code> который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="//en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. Это форк <a href="//gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">апплета для GNOME</a> с некоторыми дополнительными фичами.</p>
 
 <h3><a href="#devel" class="anchor" id="devel"><span class="octicon octicon-link"></span></a>Разработчики</h3>
 <ul>
@@ -36,7 +36,7 @@ links:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li>Скачайте <a href="https://github.com/arcan1s/oblikuestrategies/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Скачайте <a href="//github.com/arcan1s/oblikuestrategies/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
   <li>Извлеките из него файлы и установите приложение. Для глобальной установки наберите:
 
 {% highlight bash %}
