--- a/ru/projects/queued.html
+++ b/ru/projects/queued.html
@@ -57,7 +57,7 @@ Parameters:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Инструкция</h3>
 <ul>
-  <li>Скачайте <a href="https://github.com/arcan1s/queued/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
+  <li>Скачайте <a href="//github.com/arcan1s/queued/releases" title="GitHub">архив</a> с актуальной версией исходных файлов.</li>
   <li>Извлеките из него файлы и установите приложение:
 
 {% highlight bash %}
