--- a/authors.html
+++ b/authors.html
@@ -13,7 +13,7 @@ title: Authors
       </header>
       <section>
 
-<p>The code and content of this site is licensed under <a href="http://people.freebsd.org/~phk" title="Beerware license">Beerware</a> license:</p>
+<p>The code and content of this site is licensed under <a href="//people.freebsd.org/~phk" title="Beerware license">Beerware</a> license:</p>
 <blockquote>
   "THE BEER-WARE LICENSE" (Revision 42):<br>
   Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.
@@ -21,15 +21,15 @@ title: Authors
 
 <p>This site uses:</p>
 <ul>
-  <li><a href="http://jekyllrb.com/" title="Jekyll site">Jekyll</a> that licensed under <a href="http://opensource.org/licenses/MIT" title="MIT license">MIT License</a>.</li>
-  <li>The source theme was created by <a href="https://github.com/orderedlist/minimal" title="GitHub">Steve Smith</a> and licensed under <a href="http://creativecommons.org/licenses/by/3.0" title="CC BY-SA license">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
-  <li>Disqus, which is used for comment block, has own <a href="http://help.disqus.com/customer/portal/articles/466260-terms-of-service" title="Disqus license">custom license</a>.</li>
-  <li>The spoiler block was created by <a href="http://www.cyberforum.ru/post5368179.html" title="Forum post">markeley</a> and <a href="http://habrahabr.ru/post/167151/" title="Habrahabr post">Defff</a> and it looks like it has no any license.</li>
-  <li>This site uses RSS template, which was suggested by <a href="https://github.com/snaptortoise/jekyll-rss-feeds" title="GitHub">snaptortoise</a>.</li>
-  <li>Google Custom Search is licensed under own <a href="https://support.google.com/customsearch/answer/1714300" title="GCS license">custom license</a>.</li>
-  <li>Sharethis have own <a href="http://www.sharethis.com/legal/publisher-terms-of-use" title="ShareThis license">custom license</a> too.</li>
+  <li><a href="//jekyllrb.com/" title="Jekyll site">Jekyll</a> that licensed under <a href="//opensource.org/licenses/MIT" title="MIT license">MIT License</a>.</li>
+  <li>The source theme was created by <a href="//github.com/orderedlist/minimal" title="GitHub">Steve Smith</a> and licensed under <a href="//creativecommons.org/licenses/by/3.0" title="CC BY-SA license">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</li>
+  <li>Disqus, which is used for comment block, has own <a href="//help.disqus.com/customer/portal/articles/466260-terms-of-service" title="Disqus license">custom license</a>.</li>
+  <li>The spoiler block was created by <a href="//www.cyberforum.ru/post5368179.html" title="Forum post">markeley</a> and <a href="//habrahabr.ru/post/167151/" title="Habrahabr post">Defff</a> and it looks like it has no any license.</li>
+  <li>This site uses RSS template, which was suggested by <a href="//github.com/snaptortoise/jekyll-rss-feeds" title="GitHub">snaptortoise</a>.</li>
+  <li>Google Custom Search is licensed under own <a href="//support.google.com/customsearch/answer/1714300" title="GCS license">custom license</a>.</li>
+  <li>Sharethis have own <a href="//www.sharethis.com/legal/publisher-terms-of-use" title="ShareThis license">custom license</a> too.</li>
 </ul>
 
-<p>Special thanks to <a href="http://monztruo.deviantart.com/" title="Deviantart">Monztruo</a> (I borrowed <a href="http://monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946" title="Source image">his icon</a>) and <a href="http://hanabell1.deviantart.com/" title="Deviantart">HanaBell1</a> (<a href="http://hanabell1.deviantart.com/art/RES-Rainbow-PNG-398876448" title="Source image">a nice rainbow</a>).</p>
+<p>Special thanks to <a href="//monztruo.deviantart.com/" title="Deviantart">Monztruo</a> (I borrowed <a href="//monztruo.deviantart.com/art/Zalgo-Pacman-v1-194649946" title="Source image">his icon</a>) and <a href="//hanabell1.deviantart.com/" title="Deviantart">HanaBell1</a> (<a href="//hanabell1.deviantart.com/art/RES-Rainbow-PNG-398876448" title="Source image">a nice rainbow</a>).</p>
 
 <p style="text-align:center;">&copy; Evgeniy Alekseev, 2014-{{ site.time | date: '%Y' }}</p>
