--- a/projects/oblikuestrategies.html
+++ b/projects/oblikuestrategies.html
@@ -10,12 +10,12 @@ developers:
     - Evgeniy Alekseev
 license: GPL
 links:
-    - Page on <a href="http://kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">kde-look.org</a>
-    - Archlinux <a href="https://aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">AUR package</a>
+    - Page on <a href="//kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">kde-look.org</a>
+    - Archlinux <a href="//aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">AUR package</a>
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
-<p>Plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="http://en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. It is <a href="http://gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">GNOME applet</a> fork with some of special features.</p>
+<p>Plasmoid written on <code>CPP</code> that displays a random draw from Brian Eno and Peter Schmidt's <a href="//en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. It is <a href="//gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">GNOME applet</a> fork with some of special features.</p>
 
 <h3><a href="#devel" class="anchor" id="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
@@ -35,7 +35,7 @@ links:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li>Download an <a href="https://github.com/arcan1s/oblikuestrategies/releases" title="GitHub">archive</a> with latest version of source files.</li>
+  <li>Download an <a href="//github.com/arcan1s/oblikuestrategies/releases" title="GitHub">archive</a> with latest version of source files.</li>
   <li>Extract it and install the application. For global isntallation type:
 
 {% highlight bash %}
