--- a/projects/queued.html
+++ b/projects/queued.html
@@ -56,7 +56,7 @@ Parameters:
 
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <ul>
-  <li>Download an <a href="https://github.com/arcan1s/queued/releases" title="GitHub">archive</a> with latest version of source files.</li>
+  <li>Download an <a href="//github.com/arcan1s/queued/releases" title="GitHub">archive</a> with latest version of source files.</li>
   <li>Extract it and install the application:
 
 {% highlight bash %}
