--- a/projects/reportabug.html
+++ b/projects/reportabug.html
@@ -13,7 +13,7 @@ links:
 ---
 <!-- info block -->
 <h2><a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information</h2>
-<p>Qt application/library which allows users to create an issue for projects which are hosted on GitHub. It may work over <a href="https://github.com" title="GitHub">GitHub</a> or <a href="https://gitreports.com/" title="GitReports">GitReport</a>. It works fine, but it was created as proof-of-concept.</p>
+<p>Qt application/library which allows users to create an issue for projects which are hosted on GitHub. It may work over <a href="//github.com" title="GitHub">GitHub</a> or <a href="//gitreports.com/" title="GitReports">GitReport</a>. It works fine, but it was created as proof-of-concept.</p>
 
 <h3><a href="#devel" class="anchor" id="devel"><span class="octicon octicon-link"></span></a>Developers and contributors</h3>
 <ul>
@@ -34,7 +34,7 @@ links:
 <h3><a href="#instruction" class="anchor" id="instruction"><span class="octicon octicon-link"></span></a>Instruction</h3>
 <h4><a href="#singleapp" class="anchor" id="singleapp"><span class="octicon octicon-link"></span></a>Build as a single application</h4>
 <ul>
-  <li>Download the actual source <a href="https://github.com/arcan1s/reportabug/releases" title="GitHub">tarball</a>.</li>
+  <li>Download the actual source <a href="//github.com/arcan1s/reportabug/releases" title="GitHub">tarball</a>.</li>
   <li>Extract it and set up your configuration.</li>
   <li>Install the application:
 
@@ -51,7 +51,7 @@ sudo make install
 
 <h4><a href="#aslibrary" class="anchor" id="aslibrary"><span class="octicon octicon-link"></span></a>Build as a library in your project</h4>
 <ul>
-  <li>Download the actual source <a href="https://github.com/arcan1s/reportabug/releases" title="GitHub">tarball</a>.</li>
+  <li>Download the actual source <a href="//github.com/arcan1s/reportabug/releases" title="GitHub">tarball</a>.</li>
   <li>Extract it and set up your configuration.</li>
   <li>include it into your project. For example if you use <code>cmake</code>:
 
@@ -100,23 +100,23 @@ reportWindow->showWindow();
 <h2><a href="#howto" class="anchor" id="howto"><span class="octicon octicon-link"></span></a>How to use</h2>
 <h3><a href="#github" class="anchor" id="github"><span class="octicon octicon-link"></span></a>GitHub module</h3>
 
-<p>This module creates an issue over GitHub. <a href="https://developer.github.com/v3/issues/" title="Documentation">GitHub API</a> is used for creating issue. User should type own username and password. The typical POST request is:</p>
+<p>This module creates an issue over GitHub. <a href="//developer.github.com/v3/issues/" title="Documentation">GitHub API</a> is used for creating issue. User should type own username and password. The typical POST request is:</p>
 
 {% highlight bash %}
 curl -X POST -u user:pass -d '{"title":"A new bug","body":"Some error occurs"}' \
-     https://api.github.com/repos/owner/repo/issues
+     //api.github.com/repos/owner/repo/issues
 {% endhighlight %}
 
 <p>To disable this module use <code>-DENABLE_GITHUB=0</code> cmake flag.</p>
 
-<p>This module may send request using developer's token too. Please visit <a href="https://github.com/settings/applications" title="Settings">this page</a> and generate a new one. Needed scopes are <code>public_repo</code> (or <code>repo</code> if you will use it for a private repository).<br>
+<p>This module may send request using developer's token too. Please visit <a href="//github.com/settings/applications" title="Settings">this page</a> and generate a new one. Needed scopes are <code>public_repo</code> (or <code>repo</code> if you will use it for a private repository).<br>
 <b>Please keep in mind that passing the token in the clear, you may discredit your account.</b></p>
 
 <p>The typical POST request is:</p>
 
 {% highlight bash %}
 curl -X POST -H "Authorization: token token" -d '{"title":"A new bug","body":"Some error occurs"}' \
-     https://api.github.com/repos/owner/repo/issues
+     //api.github.com/repos/owner/repo/issues
 {% endhighlight %}
 
 <p>To enable this module set up your token using <code>-DOWN_GITHUB_TOKEN=0</code> cmake flag.</p>
@@ -124,7 +124,7 @@ curl -X POST -H "Authorization: token token" -d '{"title":"A new bug","body":"So
 <p>This module requires <code>QtNetwork</code> module.</p>
 
 <h3><a href="#gitreports" class="anchor" id="gitreports"><span class="octicon octicon-link"></span></a>GitReports module</h3>
-<p>This module creates issue over <a href="https://gitreports.com/about" title="GitReports">GitReports</a>. Please visit <a href="https://gitreports.com/" title="GitReports">this page</a> and set up it for your repository.</p>
+<p>This module creates issue over <a href="//gitreports.com/about" title="GitReports">GitReports</a>. Please visit <a href="//gitreports.com/" title="GitReports">this page</a> and set up it for your repository.</p>
 
 <p>To disable this module use <code>-DENABLE_GITREPORT=0</code> cmake flag. This module requires <code>QtNetwork</code> and <code>QtWebKit</code> modules.</p>
 <!-- end of howto block -->
@@ -146,14 +146,14 @@ curl -X POST -H "Authorization: token token" -d '{"title":"A new bug","body":"So
 <h3><a href="#githubconfig" class="anchor" id="githubconfig"><span class="octicon octicon-link"></span></a>GitHub module settings</h3>
 <ul>
   <li><code>GITHUB_COMBOBOX</code> - text of this module into comboBox.</li>
-  <li><code>ISSUES_URL</code> - issues url, in the most cases do not touch it. Default is <code>https://api.github.com/repos/$OWNER/$PROJECT/issues</code>. Available tags here are <code>$PROJECT</code>, <code>$OWNER</code>.</li>
+  <li><code>ISSUES_URL</code> - issues url, in the most cases do not touch it. Default is <code>//api.github.com/repos/$OWNER/$PROJECT/issues</code>. Available tags here are <code>$PROJECT</code>, <code>$OWNER</code>.</li>
 </ul>
 
 <h3><a href="#gitreportsconfig" class="anchor" id="gitreportsconfig"><span class="octicon octicon-link"></span></a>GitReports module settings</h3>
 <ul>
-  <li><code>CAPTCHA_URL</code> - captcha url, in the most cases do not touch it. Default is <code>https://gitreports.com/simple_captcha?code=</code>.</li>
+  <li><code>CAPTCHA_URL</code> - captcha url, in the most cases do not touch it. Default is <code>//gitreports.com/simple_captcha?code=</code>.</li>
   <li><code>GITREPORT_COMBOBOX</code> - text of this module into comboBox.</li>
-  <li><code>PUBLIC_URL</code> - issues url, in the most cases do not touch it. Default is <code>https://gitreports.com/issue/$OWNER/$PROJECT</code>. Available tags here are <code>$PROJECT</code>, <code>$OWNER</code>.</li>
+  <li><code>PUBLIC_URL</code> - issues url, in the most cases do not touch it. Default is <code>//gitreports.com/issue/$OWNER/$PROJECT</code>. Available tags here are <code>$PROJECT</code>, <code>$OWNER</code>.</li>
 </ul>
 <!-- end of config block -->
 
