--- a/ru/about.html
+++ b/ru/about.html
@@ -12,10 +12,10 @@ title: Обо мне
       <header>
         <h1>{{ page.title }}</h1>
         <p class="view">
-          <a href="https://github.com/arcan1s" title="GitHub">Профиль на GitHub</a><br>
-          <a href="https://www.archlinux.org/trustedusers/#arcanis" title="Профиль TU">Профиль TU на archlinux.org</a><br>
-          <a href="http://istina.msu.ru/profile/arcanis" title="Публикации">Некоторые из моих публикаций</a><br>
-          PGP: <a href="http://pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
+          <a href="//github.com/arcan1s" title="GitHub">Профиль на GitHub</a><br>
+          <a href="//www.archlinux.org/trustedusers/#arcanis" title="Профиль TU">Профиль TU на archlinux.org</a><br>
+          <a href="//istina.msu.ru/profile/arcanis" title="Публикации">Некоторые из моих публикаций</a><br>
+          PGP: <a href="//pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
           <a href="ftp://repo.arcanis.name/public" title="Ключи">Публичные ключи</a>
         </p>
 
@@ -44,9 +44,9 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
   <figcaption>Фото Гриневой О.В.</figcaption>
 </figure>
 
-<p>Меня зовут Алексеев Евгений, <a href="http://lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82" title="lurkmore">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте - <code>arcanis</code>. Я выпускник <a href="http://www.chem.msu.ru/" title="Сайт факультета">Химического факультета</a> Московского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
+<p>Меня зовут Алексеев Евгений, <a href="//lurkmore.to/%D0%9C%D0%BD%D0%B5_20_%D0%B8_%D1%8F_%D0%B1%D0%BE%D1%80%D0%BE%D0%B4%D0%B0%D1%82" title="lurkmore">мне 20 и я бородат</a>. Обычно, мой никнейм в Интернете <code>arcan1s</code>, хотя в русскоязычном сегменте - <code>arcanis</code>. Я выпускник <a href="//www.chem.msu.ru/" title="Сайт факультета">Химического факультета</a> Московского государственного университета. Сейчас я аспирант и работаю в моем Университете. Моя специальность - теоретическая химия (типа молекулярной физики и немного квантовой химии).</p>
 
-<p>На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="http://ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD" title="Wiki">Роберта Джордана</a> или <a href="http://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4" title="Wiki">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/" title="ftp">моем домашнем сервере</a>.<br>
+<p>На досуге я пишу небольшие приложения на C, C++ и Python (и скрипты на Shell). Чтобы не выглядеть, как бородатый нерд, иногда я слушаю музыку и читаю книги <a href="//ru.wikipedia.org/wiki/%D0%A0%D0%BE%D0%B1%D0%B5%D1%80%D1%82_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B0%D0%BD" title="Wiki">Роберта Джордана</a> или <a href="//ru.wikipedia.org/wiki/%D0%9C%D0%B0%D1%80%D1%82%D0%B8%D0%BD,_%D0%94%D0%B6%D0%BE%D1%80%D0%B4%D0%B6_%D0%A0%D1%8D%D0%B9%D0%BC%D0%BE%D0%BD%D0%B4_%D0%A0%D0%B8%D1%87%D0%B0%D1%80%D0%B4" title="Wiki">Джорджа Мартина</a> (и другие подобные). (Хотя,мои друзья все равно говорят мне, что я выгляжу, как бородатый нерд.) Музыка, которую я обычно слушаю, может быть найдена на <a href="ftp://repo.arcanis.name/" title="ftp">моем домашнем сервере</a>.<br>
 <label class="spoiler">
   <input type="checkbox" tabindex="-1">
   <span class="box">
@@ -58,11 +58,11 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 </label>
 </p>
 
-<p>Также я являюсь пользователем <a href="https://www.archlinux.org/" title="Archlinux">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
-<blockquote cite="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">
+<p>Также я являюсь пользователем <a href="//www.archlinux.org/" title="Archlinux">Archlinux</a>. В октябре 2013 я стал Доверенным пользователем Archlinux:</p>
+<blockquote cite="//wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines">
   The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.</blockquote>
 <p style="text-align:right;">
-  &copy; <a href="https://wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
+  &copy; <a href="//wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
 </p>
 
 <p>Вся контактная информация может быть найдена слева. Не стесняйтесь связываться со мной по любому вопросу (если что - пошлю). Ах да, чуть не забыл. Если Вы будете писать мне через ICQ или Jabber, Вы должны корректно ответить на вопрос антиспам бота. Вопрос:</p>
